# gitflare

./: .gitignore  README.md  pyproject.toml
gitflare/: __init__.py
