[tool.poetry]
name = "GitFlare"
version = "0.0.0"
description = "Platform for Developers."
authors = ["GitFlare Inc."]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
